# manotron

./: .gitignore  DOCS.md  README.md  pyproject.toml
.github/workflows/: hosted-release-e2e.yml  release.yml
scripts/: build_binary.sh  install.sh
src/manotron/: __main__.py  cli.py  config.py  db.py  export.py  files.py  models.py  openai_client.py  prompts.py  scan.py  schedule.py  schemas.py
tests/: test_openai_payload.py  test_scan_export.py  test_schedule.py
